--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Import jquery library -->
     <script src="http://code.jquery.com/jquery-2.1.1.js"></script>
     <!-- Below allows my JS to interact with my page -->
-    <script src="javascripts/A6Jscript.js"></script>
+    <script src="A6Jscript.js"></script>
     <!--Below are links to customize my fonts using Google fonts -->
     <link href='http://fonts.googleapis.com/css?family=Changa+One' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Luckiest+Guy' rel='stylesheet' type='text/css'>
